added indexRouter.js, index.ejs, footer.ejs, header.ejs, and full-width.ejs

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,7 @@
-<section id="about-us">
-    <h2>About Us: Not Your Average Express Lane!</h2>
+<%- include('./partials/header') %>
+
+<main id="about-us">
+    <h2><%= message %></h2>
     <p>
         Buckle up for a joyride where expression meets laughter! Life's too short for the slow lane. Join our express
         service for a world where information and amusement merge like the best dynamic duo. Whether you're here for a
@@ -11,4 +13,6 @@
         for fun!" Our puns are more reliable than a well-crafted Promise, and our laughs are as async as waiting for a
         callback. Debugging? Only to figure out which pun made you snort the loudest!
     </p>
-</section>
+</main>
+
+<%- include('./partials/footer') %>
