--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,17 +1,26 @@
-<section id = "contact-us">
-    <form id="contact-form" action="/contact" method = "post">
-        <div>
-            <label for = "contact-name">Name:</label>
-            <input type = "text" id="contact-name" name ="name" required>
-        </div>
-        <div>
-            <label for = "contact-email">Email:</label>
-            <input type = "Email" id="contact-email" name ="email" required>
-        </div>
-        <div>
-            <label for="comments-input">Comments:</label>
-            <textarea id = "comments-input" name ="comments"></textarea>
-        </div>
-        <button type="submit">Submit</button>
-    </form>
-</section>
+<%- include('./partials/header') %>
+
+<main id="contact-us">
+    <h2>Contact Us</h2>
+    <% if (submitted) { %>
+        <p><%= message %></p>
+    <% } else { %>
+        <form action="/contact" method="post" id="contact-form">
+            <div>
+                <label for = "contact-name">Name:</label>
+                <input type = "text" id="contact-name" name ="name" required>
+            </div>
+            <div>
+                <label for = "contact-email">Email:</label>
+                <input type = "Email" id="contact-email" name ="email" required>
+            </div>
+            <div>
+                <label for="comments-input">Comments:</label>
+                <textarea id = "comments-input" name ="comments"></textarea>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
+    <% } %>
+</main>
+
+<%- include('./partials/footer') %>
