--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -15,6 +15,19 @@ p, a, li, h1, h2, h3, h4{
     font-family: 'Barlow', sans-serif;
 }
 
+p{
+    font-weight:300;
+}
+h1, h2, h3, h4{
+    font-weight:800;
+}
+h1{
+    color:#025259;
+}
+h2{
+    color:#025259;
+}
+
 body{
     display: flex;
     flex-direction: column;
@@ -43,5 +56,30 @@ li {
 }
 a{
     text-decoration: none;
-    color: #7AA3FA;
+    color: #007172;
+}
+a:hover{
+    color:#D94F04;
+}
+
+button{
+    background:#D94F04;
+    height: 50px;
+    width:150px;
+    border-radius:5px;
+    border:1px solid #F29325;
+}
+button:hover{
+    background: #F29325;
+}
+button a{
+    color:#fff;
+    font-size: 1.2em;
+}
+button a:hover{
+    color:#fff;
+}
+
+div img{
+    max-width: 400px;
 }
