--- a/views/layouts/full-width.ejs
+++ b/views/layouts/full-width.ejs
@@ -9,6 +9,6 @@
 <body>
     <%- include('../partials/header.ejs') %>
     <%- body %>
-    <%- include('../partials/header.ejs' )%>
+    <%- include('../partials/footer.ejs' )%>
 </body>
 </html>
