--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,7 +7,7 @@
     <title>User Profile</title>
     <link rel="stylesheet" href="../styles/style.css">
 </head>
-<body>
+<main>
     <h1>User Profile</h1>
     <% if (profile) { %>
         <div>
