--- a/views/profiles.ejs
+++ b/views/profiles.ejs
@@ -1,12 +1,4 @@
-<!-- views/profile.ejs -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Profiles</title>
-    <link rel="stylesheet" href="../styles/style.css">
-</head>
+<!-- views/profiles.ejs -->
 <body>
     <h1>User Profiles</h1>
     <ul>
@@ -16,4 +8,3 @@
             </li>
         <% }); %>
 </body>
-</html>
