--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,14 +1,30 @@
 <main id="about-us">
-    <h2><%= message %></h2>
-    <p>
-        Buckle up for a joyride where expression meets laughter! Life's too short for the slow lane. Join our express
-        service for a world where information and amusement merge like the best dynamic duo. Whether you're here for a
-        quick chuckle or an enlightening stumble, we're your digital caffeine boost.
-    </p>
-    <p>
-        Hop on board, explore the expressway of content, and let's turn the ordinary into the extraordinary. Here,
-        expression meets hilarity at every twist and turn, making Node.js enthusiasts exclaim, "This is a 'node'-brainer
-        for fun!" Our puns are more reliable than a well-crafted Promise, and our laughs are as async as waiting for a
-        callback. Debugging? Only to figure out which pun made you snort the loudest!
-    </p>
+  <h2><%= message %></h2>
+  <p>
+    🚗 Buckle up for a joyride where expression meets laughter! Life's too short
+    for the slow lane. Join our express service for a world where information
+    and amusement merge like the best dynamic duo. Whether you're here for a
+    quick chuckle or an enlightening stumble, we're your digital caffeine boost.
+    ☕
+  </p>
+  <p>
+    🎢 Hop on board, explore the expressway of content, and let's turn the
+    ordinary into the extraordinary. Here, expression meets hilarity at every
+    twist and turn, making Node.js enthusiasts exclaim, "This is a
+    'node'-brainer for fun!" Our puns are more reliable than a well-crafted
+    Promise, and our laughs are as async as waiting for a callback. Debugging?
+    Only to figure out which pun made you snort the loudest! 😄🔍
+  </p>
+  <p>
+    🌟 Embark on a journey where every line of code is a pixel in the canvas of
+    amusement. We're not just developers; we're artists, painting with the
+    colors of wit and the brushes of creativity. Your screen is our gallery, and
+    each byte of humor is a masterpiece waiting to be unveiled! 🎨💻
+  </p>
+  <p>
+    🚀 Ready for liftoff? Our content is the rocket fuel that propels you into
+    the stratosphere of laughter. Node.js isn't just about asynchronous
+    operations; it's about synchronizing smiles! Fasten your seatbelt; we're
+    about to code our way to the stars. 🌌🚀
+  </p>
 </main>
