--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,85 +1,171 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;0,400;0,800;1,300;1,400;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;0,400;0,800;1,300;1,400;1,800&display=swap");
 /* CSS Reset */
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 /*Typography */
-p, a, li, h1, h2, h3, h4{
-    font-family: 'Barlow', sans-serif;
+p,
+a,
+li,
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Barlow", sans-serif;
 }
 
-p{
-    font-weight:300;
+p {
+  font-weight: 300;
 }
-h1, h2, h3, h4{
-    font-weight:800;
+h1,
+h2,
+h3,
+h4 {
+  font-weight: 800;
 }
-h1{
-    color:#025259;
+h1 {
+  color: #025259;
 }
-h2{
-    color:#025259;
-}
-
-body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin:0 auto;
+h2 {
+  color: #025259;
 }
 
-ul{
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin:0 auto;
-    padding:0;
+#header-nav {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+#welcome-message {
+  margin: 20rem;
+}
+
+#about-us {
+  margin: 10rem;
+  width: 900px;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 0;
 }
 
 li {
-    font-size: 1.4em;
-    line-height: 1.6em;
+  font-size: 1.4em;
+  line-height: 1.6em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+a {
+  text-decoration: none;
+  color: #007172;
+}
+a:hover {
+  color: #d94f04;
+}
+
+button {
+  background: #d94f04;
+  height: 50px;
+  width: 150px;
+  border-radius: 5px;
+  border: 1px solid #f29325;
+  color: beige;
+}
+button:hover {
+  background: #f29325;
+}
+button a {
+  color: #fff;
+  font-size: 1.2em;
+}
+button a:hover {
+  color: #fff;
+}
+
+div img {
+  max-width: 400px;
+}
+
+#profile-list {
+  margin-top: 15rem;
+}
+
+#developer-profile {
+  margin-top: 10rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#contact-us{
+    margin-top: 12rem;
+    width:20rem;
+}
+
+#contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  justify-content: center;
+}
+
+.input-div {
+  display: flex;
+  flex-direction: column;
+}
+
+#comments-input,
+#contact-email,
+#contact-name {
+  border-radius: 5px;
+}
+
+#form-submit {
+  align-self: center;
+  height: 40px;
+  width: 70px;
+}
+
+#side-bar {
+  position: absolute;
+  top: 35%;
+  right: 5%;
+}
+
+#error-page{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-}
-a{
-    text-decoration: none;
-    color: #007172;
-}
-a:hover{
-    color:#D94F04;
+    margin: 15rem;
 }
 
-button{
-    background:#D94F04;
-    height: 50px;
-    width:150px;
-    border-radius:5px;
-    border:1px solid #F29325;
-}
-button:hover{
-    background: #F29325;
-}
-button a{
-    color:#fff;
-    font-size: 1.2em;
-}
-button a:hover{
-    color:#fff;
+#error-icon{
+    width:5rem;
 }
 
-div img{
-    max-width: 400px;
+#site-footer {
+  position: absolute;
+  top: 93%;
 }
