--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
-<footer>
+<footer id = "site-footer">
     <p>&copy; <%= new Date().getFullYear() %> <%= contributors.join(', ') %></p>
   </footer>
