--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,17 +1,16 @@
 <!-- views/profiles.ejs -->
 
-<body>
-    <h1>User Profile</h1>
-    <% if (profile) { %>
-        <div>
-            
-            <img src="<%= profile.imagePath %>" alt="<%= profile.name %>">
-            <h2><%= profile.name %></h2>
-            <!-- <p>ID: <%= profile.id %></p> -->
-            <p>Interests: <%= profile.interests.join(', ') %></p>
-        </div>
-    <% } else { %>
-        <p>No profile found.</p>
-    <% } %>
-    <button><a href="/profiles">Back to Profiles</a></button>
-</body>
+<main id="developer-profile">
+  <h1>Developer Profile</h1>
+  <% if (profile) { %>
+  <div>
+    <img src="<%= profile.imagePath %>" alt="<%= profile.name %>" />
+    <h2><%= profile.name %></h2>
+    <!-- <p>ID: <%= profile.id %></p> -->
+    <p>Interests: <%= profile.interests.join(', ') %></p>
+  </div>
+  <% } else { %>
+  <p>No profile found.</p>
+  <% } %>
+  <button><a href="/profiles">Back to Profiles</a></button>
+</main>
