--- a/views/profiles.ejs
+++ b/views/profiles.ejs
@@ -1,10 +1,12 @@
 <!-- views/profiles.ejs -->
-<body>
-    <h1>User Profiles</h1>
+<main id = "profile-list">
+    <h1>Developer Profiles</h1>
     <ul>
-        <% profiles.forEach(profile => { %>
+        <% profiles.forEach(profile=> { %>
             <li>
-                <a href="./profiles/<%= profile.id %>"><%= profile.name %></a>
+                <a href="./profiles/<%= profile.id %>">
+                    <%= profile.name %>
+                </a>
             </li>
-        <% }); %>
-</body>
+            <% }); %>
+</main>
