--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 #welcome-message {
-  margin: 20rem;
+  margin: 10rem;
 }
 
 #about-us {
@@ -140,7 +140,7 @@ div img{
 }
 
 #developer-profile {
-  margin-top: 10rem;
+  margin-top: 5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -192,6 +192,15 @@ div img{
 }
 
 #site-footer {
-  position: absolute;
-  top: 93%;
+  /* position: absolute;
+  top: 93%; */
+}
+header{
+  width:100%;
+  display: flex;
+  flex-direction: row;
+  background: #F4E2DE;
+  justify-content: center;
+  align-items: center;
+  height:60px;
 }
