--- a/views/profiles.ejs
+++ b/views/profiles.ejs
@@ -1,6 +1,6 @@
 <!-- views/profiles.ejs -->
-<body>
-    <h1>User Profiles</h1>
+<main id = "profile-list">
+    <h1>Developer Profiles</h1>
     <ul>
         <% profiles.forEach(profile=> { %>
             <li>
