--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -11,8 +11,14 @@ html {
 }
 
 /*Typography */
-p, a, li, h1, h2, h3, h4{
-    font-family: 'Barlow', sans-serif;
+p,
+a,
+li,
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Barlow", sans-serif;
 }
 
 p {
@@ -43,6 +49,7 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0 auto;
+  min-height: 100vh;
 }
 
 #welcome-message {
@@ -50,26 +57,26 @@ body {
 }
 
 #about-us {
-  margin: 10rem;
+  margin: 5rem;
   width: 900px;
 }
 
-main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin:0 auto;
-    max-width:900px;
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 900px;
 }
 
-main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin:0 auto;
-    max-width:900px;
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 900px;
 }
 
 ul {
@@ -116,39 +123,38 @@ button a {
 button a:hover {
   color: #fff;
 }
-form{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        height: 250px;
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 250px;
 }
-input{
-width:100%;
-    height:30px;
-
+input {
+  width: 100%;
+  height: 30px;
 }
-textarea{
-width:100%;
+textarea {
+  width: 100%;
 }
-div img{
-    max-width: 400px;
+div img {
+  max-width: 400px;
+  max-height: 400px;
 }
 
 #profile-list {
-  margin-top: 15rem;
+  margin-top: 10rem;
 }
 
 #developer-profile {
-  margin-top: 5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-#contact-us{
-    margin-top: 12rem;
-    width:20rem;
+#contact-us {
+  margin-top: 5rem;
+  width: 20rem;
 }
 
 #contact-form {
@@ -182,26 +188,26 @@ div img{
   text-align: center;
 }
 
-#error-page{
-    display: flex;
-    flex-direction: column;
-    margin: 15rem;
+#error-page {
+  display: flex;
+  flex-direction: column;
+  margin: 15rem;
 }
 
-#error-icon{
-    width:5rem;
+#error-icon {
+  width: 5rem;
+}
+
+header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  background: #f4e2de;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
 }
 
 #site-footer {
-  /* position: absolute;
-  top: 93%; */
-}
-header{
-  width:100%;
-  display: flex;
-  flex-direction: row;
-  background: #F4E2DE;
-  justify-content: center;
-  align-items: center;
-  height:60px;
+  margin-top: auto;
 }
